    * [SM-1622] - servicemix-eip content enricher should copy original message properties in the way the pipeline does
    * [SM-1632] - Backport a change to Smx 3.2 branch to allow artifacts that use the servicemix-bean component to deploy on Smx4
    * [SM-1637] - smx-cxf-bc provider throws NPE at JbiInWsdl1Interceptor.handleJBIFault(JbiInWsdl1Interceptor.java:237)

Improvement

    * [SM-1271] - Make ComponentContext available to beans configured in BeanComponent service unit xbean.xml
    * [SM-1364] - allow SimpleFlatFileMarshaler to use XmlEscapingCoverter
    * [SM-1486] - servicemix-camel should use asynchronous messaging
    * [SM-1501] - ServiceMix 3.2 should change the Jetty HttpClient from blocking mode to Non blocking (similar to 3.3 trunk version)
    * [SM-1512] - update file component generated reference docs
    * [SM-1515] - Allow override of SOAPAction on new HTTP provider endpoint
    * [SM-1518] - Aggregator keeps a list of closed aggregations causing a slight memory leak
    * [SM-1542] - Modify servicemix-web sample pom file to include jetty <stopKey> and <stopPort> configuration for gracefully stopping jetty plugin.
    * [SM-1565] - Update CXF SE schema docs
    * [SM-1566] - Update generated schema configuration doc
    * [SM-1570] - CxfBcJmsTest fails frequently on slower machine
    * [SM-1574] - Allow forced shutdown of the container by cancelling pending sendSync exchanges
    * [SM-1586] - Copying properties from and to JMS messages
    * [SM-1596] - The version of Spring included in ServiceMix 3.2.x contains a bug prohibiting the use of the <tx:annotation-driven> tag in XBean config files
    * [SM-1601] - Excessive console output from cxfbc tests
    * [SM-1603] - Develop cxf-bc provider test case to verify that MTOM response is successfully handled regardless of mtomEnabled flag value
    * [SM-1610] - Upgrade ServiceMix 3.2.x branch to Spring 2.0.8